layout issues

--- a/assets/ng-app/app/map/map-view/map-view.component.scss
+++ b/assets/ng-app/app/map/map-view/map-view.component.scss
@@ -1,3 +1,7 @@
+:host {
+  display: block;
+}
+
 agm-map {
   // display: block;
   height: 100%;
@@ -6,6 +10,7 @@ agm-map {
 
 .map-view-wrapper{
   position: absolute;
+  display: block;
   // position: relative;
   top: calc(64px + 48px);
   left: 0;
